# Dissect

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AI_GUIDELINES.md  Functions Graphs.md  GOALS.md  IDEAS  LICENSE  README.md  RESUME.md  TESTS.md  build.py  pyproject.toml  setup.py
.agent/workflows/: persistence.md
.antigravity/artifacts/: implementation_plan.md  task.md  walkthrough.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  linear-sync.yml  tests.yml
archive/: ast_normalizer.py  scanner.py
archive/detectors/: bfs.py  binary_search.py  dfs.py  mergesort.py  quicksort.py
benchmarks/: accuracy.py  detection_speed.py  test_performance.py
dissect/: cli.py  diff.py  explain.py  graph.py  parser.py  trace_receiver.py  viz.py
dissect.egg-info/: SOURCES.txt
dissect/analyzer/: complexity.py
dissect/detectors/: quicksort.py
dissect/exporters/: dot.py  html.py  mermaid.py
docs/: quickstart.md
docs/architecture/: sequence_diagram.mmd
examples/: autogen_trace.json  autogen_workflow.html  autogen_workflow_v2.html  crewai_nextgen.html  crewai_trace.json  crewai_workflow.html  crewai_workflow_v2.html  sample_trace.json  workflow.html
scripts/: generate_diagrams.py
tests/: test_cli.py  test_diff.py  test_dot_exporter.py  test_explain.py  test_graph.py  test_html_exporter.py  test_mermaid_exporter.py  test_parsers.py  test_ui.py
tests/test_outputs/: ui_verify.html
